kubernetes/staging/alb-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-to-nginx
  namespace: ingress-nginx                                  # nginx-namespace-or-kube-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-ingress-ingress-nginx-controller
            port:
              number: 80
